--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+title: Home
+scrolling: GST to help revenue boost beyond budget estimates - Revenue Secretary Bajaj
+---
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,7 +19,7 @@
 <body>
     <header>Elitetax</header>
     <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
-        Go on... hover me (and hold the mouse over)!
+       {{ page.scrolling }}
     </marquee>
         <div class="mobile">+910000000000</div>
     <div class="email">E-mail:Elitetax@gmail.com</div>
