--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ scrolling: GST to help revenue boost beyond budget estimates - Revenue Secretary
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <title>Elitetax</title>
-    <link rel="stylesheet" href="./index.css">
-    <script src="./jquery-3.6.0.min.js"> </script>
-    <script src="./index.js"> </script>
+    <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/jquery-3.6.0.min.js"> </script>
+    <script src="./js/index.js"> </script>
     <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
 </head>
 
