--- a/audit.html
+++ b/audit.html
@@ -24,9 +24,9 @@ management_audit:
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <title>{{ page.title}}</title>
-    <link rel="stylesheet" href="./all.css">
-    <script src="./jquery-3.6.0.min.js"> </script>
-    <script src="./index.js"> </script>
+    <link rel="stylesheet" href="./css/all.css">
+    <script src="./js/jquery-3.6.0.min.js"> </script>
+    <script src="./js/index.js"> </script>
     <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -72,7 +72,7 @@ management_audit:
     {% for costaudit in page.cost_audit %}
         <i class="fa-regular fa-circle-check"></i> {{ costaudit }}<br><br>
     {% endfor %}
-    <img src="./Cost-Audit.jpg" width="420" height="200">
+    <img src="./img/Cost-Audit.jpg" width="420" height="200">
     <button>Cost Audit  </button>
 </div>
 
@@ -82,7 +82,7 @@ management_audit:
     {% for internal_audit in page.internal_audit %}
         <i class="fa-regular fa-circle-check"></i> {{ internal_audit }}<br><br>
     {% endfor %}
-    <img src="./internalaudit.jpg" width="380" height="170">
+    <img src="./img/internalaudit.jpg" width="380" height="170">
     <button>Internal Audit</button>
 
     
@@ -94,7 +94,7 @@ management_audit:
     {% for management_audit in page.management_audit %}
         <i class="fa-regular fa-circle-check"></i> {{ management_audit }}<br><br>
     {% endfor %}
-    <img src="./manage.jfif" width="380" height="170">
+    <img src="./img/manage.jfif" width="380" height="170">
     <button>Management Audit</button>
 
     
