--- a/gst.html
+++ b/gst.html
@@ -28,9 +28,9 @@ gst_refund:
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <title>GST</title>
-    <link rel="stylesheet" href="./all.css">
-    <script src="./jquery-3.6.0.min.js"> </script>
-    <script src="./index.js"> </script>
+    <link rel="stylesheet" href="./css/all.css">
+    <script src="./js/jquery-3.6.0.min.js"> </script>
+    <script src="./js/index.js"> </script>
     <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -74,7 +74,7 @@ gst_refund:
         {% for register_gst in page.register_gst %}
 			<i class="fa-regular fa-circle-check"></i> {{ register_gst }}<br><br>
 		{% endfor %}
-        <img src="./GSTRegistration-.jpg"width="420" height="200" >
+        <img src="./img/GSTRegistration-.jpg"width="420" height="200" >
         <button>Register GST</button>
     </div>
 
@@ -92,7 +92,7 @@ gst_refund:
    
 
 
-        <img src="./gstreturn.jpg" width="380" height="170">
+        <img src="./img/gstreturn.jpg" width="380" height="170">
 
     </div>
     <div class="appeals">
@@ -104,7 +104,7 @@ gst_refund:
         <button>GST Appeals</button>
 
     
-        <img src="./Appeal.jpg" width="380" height="170">
+        <img src="./img/Appeal.jpg" width="380" height="170">
     </div>
     <div class="refund">
         <hr>
@@ -115,7 +115,7 @@ gst_refund:
         <button>GST Refund</button>
 
     
-        <img src="./gstrefund.jpg" width="380" height="170">
+        <img src="./img/gstrefund.jpg" width="380" height="170">
     </div>
 
 
