--- a/incometax.html
+++ b/incometax.html
@@ -15,9 +15,9 @@ income_tax:
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <title>GST</title>
-    <link rel="stylesheet" href="./all.css">
-    <script src="./jquery-3.6.0.min.js"> </script>
-    <script src="./index.js"> </script>
+    <link rel="stylesheet" href="./css/all.css">
+    <script src="./js/jquery-3.6.0.min.js"> </script>
+    <script src="./js/index.js"> </script>
     <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -62,7 +62,7 @@ income_tax:
 			<i class="fa-regular fa-circle-check"></i> {{ income_tax }}<br><br>
 		{% endfor %}
      
-        <img src="./tax.png"width="420" height="200" >
+        <img src="./img/tax.png"width="420" height="200" >
         <button>Income Tax</button>
     </div>
 
