--- a/index.html
+++ b/index.html
@@ -17,37 +17,10 @@ scrolling: GST to help revenue boost beyond budget estimates - Revenue Secretary
 </head>
 
 <body>
-    <header>Elitetax</header>
-    <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+    {% include header.html %}
+	<marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
        {{ page.scrolling }}
     </marquee>
-        <div class="mobile">+910000000000</div>
-    <div class="email">E-mail:Elitetax@gmail.com</div>
-    <div class="allmenus">
-        <div class="menu1"><a href="./gst.html"> GST </a></div>
-        <div class="menu2"><a href="./audit.html">Audit Service </a></div>
-        <div class="menu3"><a href="./incometax.html">Income Tax </a></div>
-        <div class="menu4"><a href="./pf&esi.html">PF & ESI</a></div><br>
-        <div class="menu5"><a href="./miscellaneous.html">Miscellaneous</a></div>
-        <div class="menu6"><a href="./book.html">Books Maintenance</a></div>
-        <div class="menu7"><a href="">About</a></div>
-
-    </div>
-    <div class="mobilelist">
-
-        <ul>
-            <li><a href="./gst.html"> GST </a></li>
-            <li><a href="./audit.html">Audit Service </a></li>
-            <li><a href="./incometax.html">IncomeTax </a></li>
-            <li><a href="./pf&esi.html">PF & ESI</a></li>
-            <li><a href="./miscellaneous.html">Miscellaneous</a></li>
-            <li><a href="./book.html">Books Maintenance</a></li>
-            <li><a href="">About</a></li>
-
-        </ul>
-
-
-    </div>
       <div class="content3">
         Your accounting starts <br> Here
     </div>
@@ -66,11 +39,6 @@ scrolling: GST to help revenue boost beyond budget estimates - Revenue Secretary
     </div>
 
 
-    
-    <div class="menusym">
-        <i class="fa-solid fa-bars"></i>
-    </div>
-  
     
     <div class="content1">
         Your accounting starts <br> Here
