--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
-scrolling: GST to help revenue boost beyond budget estimates - Revenue Secretary Bajaj
+scrolling: GST to help revenue boost beyond budget estimates, income tax rule changed
 ---
 <!DOCTYPE html>
 <html lang="en">
