--- a/gst.html
+++ b/gst.html
@@ -3,7 +3,7 @@ title: GST
 register_gst:
   - Get your company GST Registered in 5 days
   - Filling GST Registration made easy
-  - Not complying to GST attracts heav
+  - Not complying to GST attracts heavy penalty
   - GST Registration helps to inter state
   - Companies that earn over prescribed limit should register GST
 gst_returns:
