--- a/gst.html
+++ b/gst.html
@@ -10,7 +10,7 @@ gst_returns:
   - File your GST Returns in timely manner
   - Filling mandatory for all pepole with GST
   - Avoid penality or Register cancellation
-  - Ease of avialing loans as you file regularly
+  - Ease of availing loans as you file regularly
 gst_appeals:
   - Appeals against different orders of GST
   - Excellent Legal Council
