--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 title: Home
-scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for Filing of Incometax Returns for Non audited cases is 31st July | Last Date for Filing PF & ESI Returns for the month of May 2022 is 15th June 
+scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for Filing of Incometax Returns for Non audited cases is 31st July | Last Date for Filing of PF & ESI Returns for the month of May 2022 is 15th June 
 ---
 <!DOCTYPE html>
 <html lang="en">
