--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@ scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for
        {{ page.scrolling }}
     </marquee>
       <div class="content3">
-        Your accounting starts <br> Here
+        You Focus on Business <br> We Focus on your compliance
     </div>
     <div class="content4">
         Committed To
-        Helping Our
+        Serving Our
         Clients
         Succeed
 
