--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for
        {{ page.scrolling }}
     </marquee>
       <div class="content3">
-        You Focus on Business <br> We Focus on your compliance
+        You Focus on your Business <br> We Focus on your compliance
     </div>
     <div class="content4">
         Committed To
@@ -31,7 +31,7 @@ scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for
         Succeed
 
         <h5>Our Mission is Your
-            timely accounting
+            timely Compliances
         </h5>
     </div>
     <div class="contactnow1">
