Adding footer and blogs

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ scrolling: GST to help revenue boost beyond budget estimates - Revenue Secretary
     </div>
 
     </div>
+	    {% include footer.html %}
+
 </body>
 
 </html>
