--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,39 @@
 layout: default
 title: Blog
 ---
-<h1>Latest Posts</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
+    <title>{{ page.title}}</title>
+    <link rel="stylesheet" href="./css/all.css">
+    <script src="./js/jquery-3.6.0.min.js"> </script>
+    <script src="./js/index.js"> </script>
+    <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
+</head>
+ <style>
+.content {
+  font-family: Helvetica, Arial;
+}
+.content-body {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+ </style>
+
+        {% include header.html %}
+        <h1>Latest Posts</h1>
 
 <ul>
   {% for post in site.posts %}
-    <li>
+    <li class="content">
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+      <div>
       {{ post.excerpt }}
+    </div>
     </li>
   {% endfor %}
 </ul>
