--- a/audit.html
+++ b/audit.html
@@ -24,6 +24,8 @@ management_audit:
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <title>{{ page.title}}</title>
+
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./css/all.css">
     <script src="./js/jquery-3.6.0.min.js"> </script>
     <script src="./js/index.js"> </script>
