--- a/gst.html
+++ b/gst.html
@@ -27,6 +27,8 @@ gst_refund:
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
         <title>GST</title>
+
+        <link rel="stylesheet" href="/css/common.css">
         <link rel="stylesheet" href="./css/all.css">
         <script src="./js/jquery-3.6.0.min.js"> </script>
         <script src="./js/index.js"> </script>
