--- a/incometax.html
+++ b/incometax.html
@@ -16,6 +16,7 @@ income_tax:
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
     <title>GST</title>
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="./css/all.css">
     <script src="./js/jquery-3.6.0.min.js"> </script>
     <script src="./js/index.js"> </script>
