--- a/pf&esi.html
+++ b/pf&esi.html
@@ -1,4 +1,5 @@
 ---
+layout: inner
 title: PF and ESI
 esi:
   - Mandatory for company with employees more than 10 members.
@@ -12,20 +13,6 @@ epf:
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
-    <title>PF & ESI</title>
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="./css/all.css">
-    <script src="./js/jquery-3.6.0.min.js"> </script>
-    <script src="./js/index.js"> </script>
-    <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    {% include header.html %}
     <div class="Insurance">
         <hr>
         <h3>Employee State Insurance</h3>
@@ -48,9 +35,5 @@ epf:
     <img src="./img/empfund.jpg" width="380" height="170">
     <button>EMP Provident Fund</button>
 
-    
-
-
 </div>
-</body>
-</html>
+
