--- a/audit.html
+++ b/audit.html
@@ -1,4 +1,5 @@
 ---
+layout: inner
 title: Audit Service
 cost_audit:
   - Report on all the different costs incurred.
@@ -16,24 +17,7 @@ management_audit:
   - Increase your profits by efficiently organizing <br>your resources
   - Assess the effeciency of planning and process
 ---
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
-    <title>{{ page.title}}</title>
-
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="./css/all.css">
-    <script src="./js/jquery-3.6.0.min.js"> </script>
-    <script src="./js/index.js"> </script>
-    <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-        {% include header.html %}
 
 <div class="Cost">
     <h4> Cost Audit  </h4>
@@ -66,9 +50,4 @@ management_audit:
     <img src="./img/manage.jfif" width="380" height="170">
     <button>Management Audit</button>
 
-    
-
-
-</div>
-</body>
-</html>
+    </div>
