--- a/blog.html
+++ b/blog.html
@@ -1,20 +1,10 @@
 ---
-layout: default
+layout: inner
 title: Blog
 ---
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
-  <title>{{ page.title}}</title>
-  <link rel="stylesheet" href="/css/common.css">
-  <link rel="stylesheet" href="./css/all.css">
-  <script src="./js/jquery-3.6.0.min.js"> </script>
-  <script src="./js/index.js"> </script>
-  <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
-</head>
+
 <style>
-  .container {
+.container {
     padding: 10px 10%;
 
   }
@@ -28,8 +18,7 @@ display: -webkit-box;
 overflow: hidden;
 }
 </style>
-{% include header.html %}
-<div class="container">
+<div>
   <h1>Latest Posts</h1>
   <ul>
     {% for post in site.posts %}
