--- a/incometax.html
+++ b/incometax.html
@@ -1,4 +1,5 @@
 ---
+layout: inner
 title: Income Tax
 income_tax:
   - Save the tax beyond 80C, Our experts tax consultants can help<br> you to reduce the tax.
@@ -8,23 +9,7 @@ income_tax:
   - Income tax Saving investments
   - Get huge savings
 ---
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable = no">
-    <title>GST</title>
-    <link rel="stylesheet" href="/css/common.css">
-    <link rel="stylesheet" href="./css/all.css">
-    <script src="./js/jquery-3.6.0.min.js"> </script>
-    <script src="./js/index.js"> </script>
-    <script src="https://kit.fontawesome.com/8f02bbba9a.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-    {% include header.html %}
     <div class="incometax">
         <h4> {{ page.title}}</h4>
         {% for income_tax in page.income_tax %}
@@ -35,8 +20,3 @@ income_tax:
         <button>Income Tax</button>
     </div>
 
-	    {% include footer.html %}
-
-</body>
-
-</html>
