--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ heading:
         {{ page.heading[2] }}
     </div>
     <div class="contactnow">
-        <i class="fa-solid fa-phone-flip"></i><a class='contact-now' target='_blank'href='https://docs.google.com/forms/d/e/1FAIpQLSePrqOYnMYciNB32qwS69UGciNmW-8pRzd-hvkc9qBIOKB5jA/viewform?usp=sf_link' >Contact Now</a>
+        <i class="fa-solid fa-phone-flip"></i><a class='contact-now' target='_blank'href='https://form.jotform.com/221764400140442' >Contact Now</a>
     </div>
 </div>
