--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 ---
 layout: default
 title: 1taxnation
-phoneno: +91 90000 46136
-email: 1taxnation@gmail.com
-title: 1taxnation
 scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for Filing of Incometax Returns for Non audited cases is 31st July | Last Date for Filing of PF & ESI Returns for the month of May 2022 is 15th June
 heading:
 - You Focus on your Business <br> We Focus on your compliance
@@ -24,6 +21,6 @@ heading:
         {{ page.heading[2] }}
     </div>
     <div class="contactnow">
-        <i class="fa-solid fa-phone-flip"></i><a class='contact-now' target='_blank'href='https://form.jotform.com/221764400140442' >Contact Now</a>
+        <a class='contact-now' target='_blank'href='https://form.jotform.com/221764400140442' >Contact Us</a>
     </div>
 </div>
