fix mobile screen marquee

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ heading:
 - Committed To Serving Our Clients Succeed
 - Our Mission is your timely Compliances
 ---
-<marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
+<marquee behavior="scroll" direction="right" onmouseover="this.stop();" onmouseout="this.start();">
 {{page.scrolling}}
 </marquee>
 <div class='content-container'>
