--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 ---
 layout: default
 title: 1taxnation
+description: Our company helps you in GST, Audit Services and anything Tax.
 scrolling: Income tax Returns now enabled to file for AY 2022-23 | Last Date for Filing of Incometax Returns for Non audited cases is 31st July | Last Date for Filing of PF & ESI Returns for the month of May 2022 is 15th June
 heading:
 - You Focus on your Business <br> We Focus on your compliance
 - Committed To Serving Our Clients Succeed
 - Our Mission is your timely Compliances
 ---
-<marquee behavior="scroll" direction="right" onmouseover="this.stop();" onmouseout="this.start();">
+<marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
 {{page.scrolling}}
 </marquee>
 <div class='content-container'>
